--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "angular": "github:angular/bower-angular@^1.4.7",
       "angular-route": "github:angular/bower-angular-route@^1.4.7",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
+      "purecss": "npm:purecss@^0.6.0",
       "skeleton": "github:dhg/Skeleton@^2.0.4"
     },
     "devDependencies": {
