attempted web.config fix

--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,7 @@
 <system.webServer>
   <rewrite>
     <rules> 
-      <rule name="Main Rule" stopProcessing="true">
+      <rule name="default" stopProcessing="true">
         <match url=".*" />
         <conditions logicalGrouping="MatchAll">
           <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />                                 
