--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-bump": "^0.3.1",
     "gulp-changed": "^1.1.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-jade": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-protractor": "1.0.0",
