--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "jspm": {
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.5.0",
+      "angular": "github:angular/bower-angular@^1.5.0-rc.0",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
       "skeleton": "github:dhg/Skeleton@^2.0.4"
     },
