--- a/package.json
+++ b/package.json
@@ -3,36 +3,28 @@
   "version": "1.0.0",
   "description": "The personal website of writer, photographer and programmer Zack Schuster.",
   "repository": {
+    "type": "git",
     "url": "https://github.com/ledge23/completely-fictional"
   },
-  "main": "dist/js/app.js",
-  "dependencies": {
-    "express": "^4.13.3"
-  },
   "scripts": {
-    "start": "gulp build && npm run bundle",
-    "bundle": "jspm bundle dist/js/app.js dist/js/bundle.js --minify"
+    "start": "gulp build"
   },
   "author": "Zack Schuster",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.3.13",
+    "autobundler": "^0.5.5",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.0",
     "gulp-jade": "^1.1.0",
-    "gulp-ng-annotate": "^1.1.0",
     "gulp-uglify": "^1.5.1"
   },
-  "jspm": {
-    "dependencies": {
-      "angular": "github:angular/bower-angular@^1.5.0-rc.0",
-      "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
-      "skeleton": "github:dhg/Skeleton@^2.0.4"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
+  "dependencies": {
+    "vue": "^1.0.14",
+    "vue-resource": "^0.6.1",
+    "vue-router": "^0.7.8"
   }
 }
