set default to build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,10 @@
   ],
   "tasks": [
     {
-      "taskName": "default",
+      "taskName": "build",
       "args": [],
       "isBuildCommand": true,
-      "isWatching": true,
+      "isWatching": false,
       "problemMatcher": [
         "$lessCompile",
         "$tsc",
