--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-jade": "^1.1.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "jscs": "^2.8.0"
   },
   "dependencies": {
     "vue": "^1.0.14",
