Change `npm run start` to `npm postinstall`
"Should" guarantee I get a built file on Azure without having to track it in Git.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/ledge23/completely-fictional"
   },
   "scripts": {
-    "start": "gulp build"
+    "postinstall": "gulp build"
   },
   "author": "Zack Schuster",
   "license": "MIT",
