Shorten build to just compile JS
(It's all I really need now)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
   ],
   "tasks": [
     {
-      "taskName": "build",
+      "taskName": "default",
       "args": [],
       "isBuildCommand": true,
       "isWatching": false,
