--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/ledge23/completely-fictional"
   },
   "scripts": {
-    "postinstall": "gulp build"
+    "postinstall": "gulp"
   },
   "author": "Zack Schuster",
   "license": "MIT",
@@ -18,8 +18,6 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-jade": "^1.1.0",
     "gulp-uglify": "^1.5.1",
     "jscs": "^2.8.0"
   },
