--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "completely-fictional",
   "version": "1.0.0",
   "description": "The personal website of writer, photographer and programmer Zack Schuster.",
+  "author": "Zack Schuster",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/ledge23/completely-fictional"
@@ -9,16 +11,12 @@
   "scripts": {
     "start": "node gulpfile.js"
   },
-  "author": "Zack Schuster",
-  "license": "MIT",
+  "engines": {
+    "node": ">=5.0.0"
+  },
   "devDependencies": {
-    "autobundler": "^0.5.5",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
+    "autobundler": "^0.5.6",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.5.1",
     "jscs": "^2.8.0"
   },
   "dependencies": {
