--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"private": true,
   "name": "completely-fictional",
   "version": "1.0.0",
   "description": "The personal website of writer, photographer and programmer Zack Schuster.",
@@ -6,22 +7,20 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ledge23/completely-fictional"
+    "url": "https://github.com/zackschuster/completely-fictional"
   },
   "scripts": {
-    "start": "node gulpfile.js"
+    "start": "vfx"
   },
-  "engines": {
-    "node": ">=5.0.0"
+	"vfx": {
+		"source": "src"
+	},
+  "dependencies": {
+    "vue": "^2.0.3",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1"
   },
   "devDependencies": {
-    "autobundler": "^0.5.6",
-    "gulp": "^3.9.0",
-    "jscs": "^2.8.0"
-  },
-  "dependencies": {
-    "vue": "^1.0.14",
-    "vue-resource": "^0.6.1",
-    "vue-router": "^0.7.8"
+    "vfx": "^0.10.9"
   }
 }
